# gurobi-sphinxtheme

./: .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg
docs_gurobi_com/: __init__.py  checkbuilder.py  context.py  latex.py  toctree.py  versions.py
docs_gurobi_com/latex/: gurobidocs.sty
docs_gurobi_com/tests/: test_context.py  test_versions.py
docs_gurobi_com/theme/: brand.html  navigation.html  page.html  pagebase.html  theme.conf  versionflyout.html
docs_gurobi_com/theme/static/: docs_gurobi_com.css  scrolltree.js  versionflyout.css  versionflyout.js
gurobi_sphinxtheme/: __init__.py  conf.py
gurobi_sphinxtheme/theme/: navigation.html  page.html  pagebase.html  theme.conf  versiondrop.html  versionflyout.html
gurobi_sphinxtheme/theme/sidebar/: oursearch.html
gurobi_sphinxtheme/theme/static/: gurobi-tabs.css  gurobi.css  versiondrop.css  versiondrop.js  versionflyout.js
scripts/: local.sh  oldversion.sh
src/gurobi_sphinxtheme/: __init__.py
