[metadata]
name = gurobi_sphinxtheme
version = attr:src.gurobi_sphinxtheme.__version__

author = Gurobi Optimization

description = Gurobi Sphinx theme
long_description = file: README.md
long_description_content_type = text/markdown


classifiers =
  Framework :: Sphinx
  Framework :: Sphinx :: Theme
  License :: OSI Approved :: MIT License
  Environment :: Web Environment
  Intended Audience :: Developers
  Programming Language :: Python :: 3
  Operating System :: OS Independent
  Topic :: Documentation
  Topic :: Software Development :: Documentation

[options]
python_requires = >=3.7
install_requires =
  sphinx >=4.0
include_package_data = True
packages=find:
package_dir=
  =src

[options.packages.find]
where=src

[options.extras_require]
docs =
  furo
  
[options.entry_points]
sphinx.html_themes =
  gurobi = gurobi_sphinxtheme
